# Xtal-Agent

./: AGENTS.md  CODE.md  DEPLOYMENT.md  DOCUMENTATION.md  EXTERNAL_SOFTWARE.md  README.md  SKILLS.md  STRUCTURE.json  TEMPLATES.md
docs/: agent_architecture_coverage_audit.md
skills/crystallography-aimless-validation/: SKILL.md
skills/crystallography-ligand-generation/: SKILL.md
skills/crystallography-mainline/: SKILL.md
skills/crystallography-mr-refine/: SKILL.md
xtal-agent/: AGENTS.md  README.md  pyproject.toml
xtal-agent/env/: activate.sh
xtal-agent/skills/: phase1_data_processing.md  phase2_scaling.md  phase3_model_prep.md  phase4_mr.md  phase5_low_res_refinement.md  phase5_refinement.md  phase6_validation.md
xtal-agent/src/crystal_agent/: architecture.py  cli.py  decision_engine.py  envcheck.py  generate_XDS.INP  manifest.py  map_ligand_atoms.py  parsers.py  phase_orchestrator.py  phaser_runner.py  pipeline.py  ranking.py  refinement_runner.py  report.py  runner.py  schemas.py  step_tracker.py  workflow.py
xtal-agent/src/crystal_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xtal-agent/templates/: report.html.j2
xtal-agent/tests/: test_architecture.py  test_cli.py  test_decision_engine.py  test_envcheck.py  test_manifest.py  test_parsers.py  test_phase_orchestrator.py  test_phaser_runner.py  test_portability.py  test_ranking.py  test_refinement_runner.py  test_report.py  test_runner.py  test_step_tracker_strict.py  test_workflow.py
xtal-agent/workflows/: Snakefile  config.example.yaml
(+17 files in other folders)
